# cubejs-mongosql-driver

./: .dockerignore  .eslintrc.json  .gitignore  .prettierrc  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  PUBLISH.md  README.md  RELEASE.md  SPEC.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json  vitest.config.ts  vitest.cube-e2e.config.ts  vitest.integration.config.ts
.cargo/: config.toml
.changeset/: README.md  config.json  idempotent-publish.md  lazy-schema-load-on-query.md  release-runners-artifacts.md  replace-napi-prepublish.md  restore-ci-after-rename.md
.github/workflows/: ci.yaml  ci.yml  e2e.yaml  integration-matrix.yaml  release.yaml  release.yml
crates/native/: Cargo.toml  build.rs
crates/native/src/: cancel.rs  client.rs  config.rs  error.rs  execute.rs  lib.rs  pipeline_rewrite.rs  schema.rs  translate.rs
crates/native/tests/: client_e2e.rs  critic_probe.rs  execute_integration.rs  schema_collection.rs  translate_group_by.rs
docs/: critic-review-v1.md  spike-mongosql.md
examples/atlas-prod/: .env.example  README.md  cube.js
examples/comprehensive/: README.md  docker-compose.yaml
examples/comprehensive/cube/: cube.js
examples/comprehensive/cube/model/: categories.js  customers.js  inventory.js  order_items.js  orders.js  payments.js  products.js
examples/comprehensive/seed/: catalog-data.js  catalog-schemas.js  sales-data.js  sales-schemas.js
examples/docker/: Dockerfile  README.md  build-driver.sh  docker-compose.atlas-sql.yaml  docker-compose.broken.yaml  docker-compose.yaml
examples/docker/cube/: cube.js
examples/docker/cube/model/: configs.js  granular_events.js  orders.js  orders_secondary.js  product_catalog.js  revenue_events.js  revenue_events_raw.js  tz_events.js  weird_types.js
examples/docker/cube/model-atlas-sql/: calllogs.js
examples/docker/pkg/: .gitkeep
examples/local-dev/: README.md  docker-compose.yaml  schema.yaml  seed-data.js  seed-schemas.js
examples/local-dev/cube/: cube.js
examples/local-dev/cube/model/: orders.js
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64-gnu/: package.json
npm/linux-arm64-musl/: package.json
npm/linux-x64-gnu/: package.json
npm/linux-x64-musl/: package.json
scripts/: build-rust.mjs  preflight-release.sh
src/: MongoSqlDriver.ts  MongoSqlQuery.ts  config.ts  index.ts  native.ts  types.ts
tests/cube-e2e/: cube-e2e.test.ts  setup.ts
tests/integration/: README.md  atlas-sql.test.ts  basic-queries.test.ts  cancellation.test.ts  connection-settings.test.ts  docker-compose.test.yml  driver-tests-shared.test.ts  errors.test.ts  incremental-schema.test.ts  large-in-list.test.ts  lazy-schema-load.test.ts  preaggregations.test.ts  row-shape-normalization.test.ts  sanity.test.ts  schema-modes.test.ts  setup.ts  streaming.test.ts
tests/integration/fixtures/: mongo-schema.json  mongo-schema.yaml  seed-data.js  seed-schemas.js  seed-secondary-data.js  seed-secondary-schemas.js
tests/unit/: config.test.ts  dialect.test.ts  driver.test.ts  native-wrapper.test.ts  preagg-call-sequence.test.ts  preaggregations.test.ts  sanity.test.ts
