[workspace]
members = ["crates/native"]
resolver = "2"

[workspace.package]
version = "0.1.0-pre.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/jmenga/cubejs-mongosql-driver"

[workspace.dependencies]
napi = { version = "2.16", default-features = false, features = ["napi8", "tokio_rt", "serde-json"] }
napi-derive = "2.16"
napi-build = "2.1"

# MongoDB
# Default features include the tokio runtime which the napi-rs `tokio_rt`
# feature provides; rustls-tls is required for Atlas. Avoid `compat-3-3-0` —
# that flag is for migrating from 2.x to 3.x, not for new code.
mongodb = { version = "3", features = ["rustls-tls"] }
bson = "2"

# MongoSQL translator — open-source MongoDB Apache-2.0 crate.
# Confirmed by T00 spike: NOT published to crates.io (Cargo.toml in upstream
# declares version "0.0.0"). Consume via git source pinned to a release tag.
# The exact tag is selected at T03 implementation time from the upstream
# Releases page: https://github.com/mongodb/mongosql/releases
# Example pin (revisit at T03):
#   mongosql = { git = "https://github.com/mongodb/mongosql", tag = "v1.0.0-beta-1" }
# mongosql = { ... }   # T03

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
