[package]
name = "cubejs-mongosql-driver-native"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
# - cdylib: napi-rs `.node` shared library (Cube driver consumers)
# - rlib:   so the in-tree `tests/` integration tests can `use cubejs_mongosql_driver_native::*`
crate-type = ["cdylib", "rlib"]

[features]
# Default: full napi-rs runtime symbols are linked (the .node binary path).
default = []
# Test/CI: enable to compile the rlib without expecting the Node-side
# `_napi_register_module_v1` and friends, used when running integration
# tests outside a Node host. Forwards to napi-rs's own `noop` feature.
noop = ["napi/noop"]

[dependencies]
napi = { workspace = true }
napi-derive = { workspace = true }
mongodb = { workspace = true }
bson = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

mongosql = { workspace = true }
agg-ast = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }
